# autorustler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  battery.py  cal.cc  crosscompile.cmake  hello.py  log.cc  main.c  poll.py  radio.cc  radio.h  rc.cc  ui.cc
avr/: Makefile  main.c
cam/: CMakeLists.txt  cam.cc  cam.h  camtest.cc
camcal/: cal.py  caloutput.txt  undistort.py
car/: CMakeLists.txt  pca9685.h  radio.cc  radio.h  rcio.cc  rctest.cc  servotest.cc  teensy.cc  teensy.h
diyrobocars/: .gitignore  curvilinear.ipynb  ekf_formulation.ipynb  ekf_numeric.ipynb  lanefind.ipynb  lanematch.ipynb  oakwarehouse.path  raceline_ds.txt  raceline_k.txt  raceline_psie.txt  raceline_ye.txt  sim.py  track.path  track_k.txt  track_opt.py  track_u.txt  track_x.txt  trackdata.f32  trackdata.h
drive/: CMakeLists.txt  bucketcount.txt  controller.cc  controller.h  controltest.cc  drive.cc  ekf.cc  floodmap.txt  imgproc.cc  imgproc.h  udmask.txt  udplane.cc  udplane.h  udplane.txt
gpio/: gpio.h  i2c.cc  i2c.h
gps/: CMakeLists.txt  sirf.cc  sirf.h  sirf_main.cc  ubx.cc  ubx.h  ubx_main.cc  vec3.h
imu/: CMakeLists.txt  README  i2c.cc  i2c.h  imu.cc  imu.h  imu_log.cc  imu_main.cc  mpu9150.cc
input/: CMakeLists.txt  js.cc  js.h  jstest.cc
lcd/: CMakeLists.txt  font.cc  gpio.h  lcd.cc  lcd.h  lcdtest.cc  spi.cc  spi.h
motorcontrol/: mcekf.py  teensy.py
py/: .gitignore  calibrate.py  main.py  parse.py  quat.py  rectifyvid.py  so3.py  state.py
scad/: .gitignore  Makefile  README.md  baseplate.scad  camholder-arducam.scad  camholder.scad  platform.scad  rpi.scad  traxxas.scad  v2.scad
sch/: untitled.brd  untitled.sch
scripts/: showyuv.py
ubx/: Makefile  ubx.c  ubx.cc  vec3.h
ui/: CMakeLists.txt  cam.cc  datalog.h  gps.cc  imu.cc  recording.cc  recording.h  ui.cc  uistate.h
vis/: CMakeLists.txt  README.md  image_pyramid.h  keyframe.h  motiontrack.cc  parse.cc  tracktest.cc  vis-db.cc  vis.cc
